<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Save Or Reset"
        app:key="save_exit">

        <ListPreference
            app:defaultValue="Save&amp;Exit"
            app:entries="@array/save_entries"
            app:entryValues="@array/save_values"
            app:key="save_settings"
            app:title="Save Preferences"

            />

        <Preference app:title="Finish"
            app:key="finish"
            app:summary="Click to Save Your Settings or discard it"

            />


    </PreferenceCategory>

</PreferenceScreen>